Updating to v2.8.0-rc1